Bug 345149 - Regression: Undo action for removed widgets has no effect
Summary: Regression: Undo action for removed widgets has no effect
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (show other bugs)
Version: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-14 14:44 UTC by Antonis G.
Modified: 2015-05-29 07:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.2.2


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonis G. 2015-03-14 14:44:16 UTC
In the past once you removed multiple widgets a seperate notification would appear for each one of them, now the notifications are grouped into one, and the undo action is not working.

Reproducible: Always

Steps to Reproduce:
1. Place a few widget to desktop, remove them
2. open notifications popup and try to undo



Undo still works when deleting an individual widget, but not multiple.
Screenshot of the problem http://imgur.com/mNrmDPW
Comment 1 Bhushan Shah 2015-03-15 15:43:49 UTC
Git commit fdd8ffc4186cbfe610a78a01766d84ff3574160e by Bhushan Shah.
Committed on 15/03/2015 at 15:39.
Pushed by bshah into branch 'Plasma/5.2'.

Set QGuiApplication::applicationDisplayName() too

Notifications dataengine checks the applicationDisplayName() against the
event title and if it same it allows to 'spam' aka it will not merge
similar notifications. But when we started to use KAboutData this broke
functionality. KAboutData will set only properties available in
QCoreApplication and hence applicationDisplayName will be different.

This fixes it by setting applicationDisplayName.
FIXED-IN: 5.2.2

M  +1    -0    shell/main.cpp

http://commits.kde.org/plasma-workspace/fdd8ffc4186cbfe610a78a01766d84ff3574160e
Comment 2 Martin Klapetek 2015-03-15 16:39:19 UTC
Fwiw, KAboutData in setApplicationData() also does 

"app->setProperty("applicationDisplayName", aboutData.displayName());"

...so if that doesn't work, it should be investigated why it doesn't work and fixed properly there.

Plus, it should really be "app.setApplicationDisplayName(aboutData.displayData());" to avoid strings duplication.
Comment 3 Martin Klapetek 2015-03-15 16:40:11 UTC
*aboutData.displayName(), obviously :)
Comment 4 Bhushan Shah 2015-03-15 16:51:36 UTC
Git commit 841eaaf0e8ebcf59b2761e9461453b5fed3e2fb9 by Bhushan Shah.
Committed on 15/03/2015 at 16:49.
Pushed by bshah into branch 'master'.

Fix the application display name

It was "Plasma" before and making it "Plasma Shell" makes undo
notifications break.

M  +1    -1    shell/main.cpp

http://commits.kde.org/plasma-workspace/841eaaf0e8ebcf59b2761e9461453b5fed3e2fb9
Comment 5 Martin Klapetek 2015-05-29 07:30:29 UTC
Git commit 6b3900767b6c97916e0e82dd8aa8fa8029ca7616 by Martin Klapetek.
Committed on 29/05/2015 at 07:29.
Pushed by mklapetek into branch 'Plasma/5.3'.

Unbreak Undo notifications on Plasmoid removal

REVIEW: 123926

M  +1    -1    dataengines/notifications/notificationsengine.cpp

http://commits.kde.org/plasma-workspace/6b3900767b6c97916e0e82dd8aa8fa8029ca7616